--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "root",
-  "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
+  "name": "syngrisi-tool",
+  "private": false,
+  "version": "0.0.0",
+  "license": "MIT",
+  "scripts": {
+    "build": "lerna run build",
+    "test": "lerna run test"
+  },
   "devDependencies": {
     "lerna": "^6.5.1"
-  }
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
