--- a/packages/create-sy/package.json
+++ b/packages/create-sy/package.json
@@ -56,13 +56,13 @@
     "eslint": "^8.32.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-unicorn": "^45.0.2",
-    "git-clone": "^0.2.0",
     "npm-run-all": "^4.1.5",
     "release-it": "^15.6.0",
     "typescript": "^4.9.4",
     "vitest": "^0.28.1"
   },
   "dependencies": {
+    "git-clone": "^0.2.0",
     "chalk": "^5.2.0",
     "commander": "^10.0.0",
     "cross-spawn": "^7.0.3",
@@ -70,5 +70,6 @@
     "minimist": "^1.2.8",
     "read-pkg-up": "^9.1.0",
     "semver": "^7.3.8"
-  }
+  },
+  "gitHead": "339e8f21544682455c26b377dfab6f488130a434"
 }
