--- a/packages/create-sy/package.json
+++ b/packages/create-sy/package.json
@@ -59,17 +59,15 @@
     "npm-run-all": "^4.1.5",
     "release-it": "^15.6.0",
     "typescript": "^4.9.4",
-    "vitest": "^0.28.1"
+    "vitest": "^0.28.1",
+    "vite": "^4.1.4"
   },
   "dependencies": {
     "chalk": "^5.2.0",
-    "commander": "^10.0.0",
-    "cross-spawn": "^7.0.3",
     "git-clone": "^0.2.0",
-    "has-yarn": "^3.0.0",
     "minimist": "^1.2.8",
-    "read-pkg-up": "^9.1.0",
-    "semver": "^7.3.8"
+    "semver": "^7.3.8",
+    "inquirer": "^9.1.4"
   },
-  "gitHead": "c03d7186e25a49ae37178ee3a7e1861361d579df"
+  "gitHead": "e6594922955e68e8cedd3f91f6a447eba737ce62"
 }
