--- a/packages/create-sy/package.json
+++ b/packages/create-sy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-sy",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Install and setup Syngrisi",
   "author": {
     "name": "Viktar Silakou",
@@ -59,15 +59,15 @@
     "npm-run-all": "^4.1.5",
     "release-it": "^15.6.0",
     "typescript": "^4.9.4",
-    "vitest": "^0.28.1",
-    "vite": "^4.1.4"
+    "vite": "^4.1.4",
+    "vitest": "^0.28.1"
   },
   "dependencies": {
     "chalk": "^5.2.0",
     "git-clone": "^0.2.0",
+    "inquirer": "^9.1.4",
     "minimist": "^1.2.8",
-    "semver": "^7.3.8",
-    "inquirer": "^9.1.4"
+    "semver": "^7.3.8"
   },
   "gitHead": "e6594922955e68e8cedd3f91f6a447eba737ce62"
 }
