--- a/packages/node-resemble.js/package.json
+++ b/packages/node-resemble.js/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@syngrisi/node-resemble.js",
+  "private": "false",
   "version": "0.0.8",
   "description": "Image analysis and comparison for nodejs",
   "main": "resemble.js",
@@ -37,5 +38,5 @@
     "gulp-jasmine": "4.0.0",
     "gulp-util": "3.0.7"
   },
-  "gitHead": "c0fd83e24554e8720fc20c2ea9632580d6a70373"
+  "gitHead": "c0a858cccb2a1c71c8c08aa518b3fd49c846e00f"
 }
